--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,8 +1,8 @@
-$primary-color: (#444);
-$secondary-color: #eece1a;
+$primary-color: #fff;
+$secondary-color: #ff001b;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
-$background-opacity: 0.9;
+$background-opacity: 0.6;
 
 @mixin easeOut {
   transition: all 0.5s ease-out;
@@ -31,7 +31,7 @@ $background-opacity: 0.9;
 
 // Set Text Color
 @function set-text-color($color) {
-  @if (lightness($color) > 40) {
+  @if (lightness($color) > 20) {
     @return #000;
   } @else {
     @return #fff;
