justify text align

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -16,7 +16,7 @@
 @include mediaMd {
   main {
     align-items: center;
-    text-align: center;
+    text-align: justify;
 
     .lg-heading {
       line-height: 1;
