--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,6 +24,7 @@ h3 {
 
   &.lg-heading {
     font-size: 6rem;
+    text-align: center;
   }
 
   &.sm-heading {
@@ -50,9 +51,9 @@ header {
 }
 
 main {
-  padding: 4rem;
+  padding: 2rem;
   // height: 100%;
-  min-height: calc(100vh - 60px);
+  min-height: calc(100vh - 10px);
 
   .icons {
     margin-top: 1rem;
@@ -70,17 +71,18 @@ main {
   &#home {
     overflow: hidden;
     h1 {
-      margin-top: 20vh;
+      margin-top: 5vh;
     }
   }
 }
 
-.about-info {
+.main-info {
   display: grid;
-  grid-gap: 30px;
+  grid-gap: 0.5rem;
   grid-template-areas:
     "bioimage bio bio"
-    "job1 job2 job3";
+    "job1 job2 job3"
+    "buttons1 buttons2 buttons3";
   grid-template-columns: repeat(3, 1fr);
 
   .bio-image {
@@ -92,7 +94,7 @@ main {
 
   .bio {
     grid-area: bio;
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
 
   .job-1 {
@@ -107,6 +109,18 @@ main {
     grid-area: job3;
   }
 
+  .buttons1 {
+    grid-area: buttons1;
+  }
+
+  .buttons2 {
+    grid-area: buttons2;
+  }
+
+  .buttons3 {
+    grid-area: buttons3;
+  }
+
   .job {
     background: lighten($primary-color, 5);
     padding: 0.5rem;
@@ -114,15 +128,16 @@ main {
   }
 }
 
-// Work/Projects
+// Sponsorship Page
 
-.projects {
+.sponsor {
   display: grid;
   grid-gap: 0.7rem;
   grid-template-columns: repeat(3, 1fr);
 
   img {
-    width: 100%;
+    width: 250px;
+    height: 250px;
     border: 3px #fff solid;
 
     &:hover {
