--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -15,7 +15,7 @@ $background-opacity: 0.6;
       background-attachment: fixed;
       background-size: cover;
 
-      &:after {
+      .overlay {
         content: "";
         position: absolute;
         top: 0;
@@ -46,7 +46,7 @@ $background-opacity: 0.6;
 }
 
 @mixin mediaMd {
-  @media screen and (max-width: 768px) {
+  @media screen and (min-width: 373px) and (max-width: 768px) {
     @content;
   }
 }
