--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -3,6 +3,12 @@
   main {
     text-align: center;
 
+    .lg-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+      text-align: center;
+      font-size: 5rem;
+    }
     .sponsor {
       grid-template-columns: repeat(3, 1fr);
       align-items: center;
@@ -18,6 +24,13 @@
     .sponsor {
       grid-template-columns: repeat(2, 1fr);
     }
+
+    .lg-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+      text-align: center;
+      font-size: 3rem;
+    }
   }
 }
 
@@ -27,15 +40,15 @@
     align-items: center;
     text-align: center;
 
-    .justifiedText {
-      text-align: justify;
-    }
-
     .lg-heading {
       line-height: 1;
-      margin-bottom: 1rem;
+      margin-bottom: 0.5rem;
       text-align: center;
-      font-size: 5rem;
+      font-size: 3rem;
+    }
+
+    .justifiedText {
+      text-align: justify;
     }
   }
 
@@ -90,11 +103,18 @@
 @include mediaSm {
   main {
     main#home h1 {
-      margin-top: 10vh;
+      margin-top: 5vh;
     }
 
     .sponsor {
       grid-template-columns: repeat(1, 1fr);
+    }
+
+    .lg-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+      text-align: center;
+      font-size: 2rem;
     }
   }
 }
