--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,12 +23,12 @@ h3 {
   font-weight: 400;
 
   &.lg-heading {
-    font-size: 6rem;
+    font-size: 4rem;
     text-align: center;
   }
 
   &.sm-heading {
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     padding: 0.2rem 1rem;
     background: rgba(lighten($secondary-color, 2), 1);
     color: #fff;
@@ -57,10 +57,14 @@ main {
 
   .icons {
     margin-top: 1rem;
-    object-position: inherit;
+    align-content: space-between;
 
     a {
-      padding: 0.4rem;
+      padding: 1rem;
+
+      link {
+        display: inline-block;
+      }
 
       &:hover {
         color: $secondary-color;
