--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -46,7 +46,7 @@ $background-opacity: 0.6;
 }
 
 @mixin mediaMd {
-  @media screen and (min-width: 373px) and (max-width: 768px) {
+  @media screen (max-width: 768px) {
     @content;
   }
 }
