--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -3,15 +3,34 @@
   main {
     text-align: center;
 
+    .h2 {
+      font-size: 2rem;
+    }
+
     .lg-heading {
       line-height: 1;
       margin-bottom: 1rem;
       text-align: center;
-      font-size: 5rem;
+      font-size: 6rem;
+    }
+
+    .sm-heading {
+      line-height: 1;
+      margin-bottom: 2.5rem;
+      text-align: center;
+      font-size: 3rem;
+      margin-top: 2.5rem;
+    }
+
+    .justifiedText {
+      text-align: justify;
     }
     .sponsor {
       grid-template-columns: repeat(3, 1fr);
       align-items: center;
+    }
+    p {
+      font-size: 1.3rem;
     }
   }
 }
@@ -29,7 +48,21 @@
       line-height: 1;
       margin-bottom: 1rem;
       text-align: center;
+      font-size: 6rem;
+    }
+
+    .sm-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+      text-align: center;
       font-size: 3rem;
+    }
+
+    .justifiedText {
+      text-align: justify;
+    }
+    p {
+      font-size: 1.3rem;
     }
   }
 }
@@ -40,18 +73,31 @@
     align-items: center;
     text-align: center;
 
+    .h2 {
+      font-size: 2rem;
+    }
+
     .lg-heading {
       line-height: 1;
       margin-bottom: 0.5rem;
       text-align: center;
-      font-size: 3rem;
+      font-size: 5rem;
+    }
+
+    .sm-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+      text-align: center;
+      font-size: 2.5rem;
     }
 
     .justifiedText {
       text-align: justify;
     }
+    p {
+      font-size: 1.3rem;
+    }
   }
-
   ul.menu-nav,
   div.menu-branding {
     float: none;
@@ -114,7 +160,20 @@
       line-height: 1;
       margin-bottom: 1rem;
       text-align: center;
+      font-size: 4rem;
+    }
+    .sm-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+      text-align: center;
       font-size: 2rem;
+    }
+
+    .justifiedText {
+      text-align: justify;
+    }
+    p {
+      font-size: 1.3rem;
     }
   }
 }
