--- a/scss/main.scss
+++ b/scss/main.scss
@@ -60,8 +60,8 @@ main {
     margin-top: 1rem;
     display: grid;
     grid-gap: 0.5rem;
-    grid-template-areas: "icon1 icon2 icon3 icon4 icon5";
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-areas: "icon1 icon2 icon3";
+    grid-template-columns: repeat(3, 1fr);
 
     .icon1 {
       grid-area: icon1;
