--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -40,13 +40,13 @@ $background-opacity: 0.6;
 
 // Media Query Mixins
 @mixin mediaSm {
-  @media screen and (max-width: 500px) {
+  @media screen and (min-width: 0px) and (max-width: 400px) {
     @content;
   }
 }
 
 @mixin mediaMd {
-  @media screen and (max-width: 768px) {
+  @media screen and (min-width: 401px) and (max-width: 768px) {
     @content;
   }
 }
