--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -17,7 +17,7 @@
 
   // Rotate Into X With Menu Lines
   &.close {
-    transform: rotate(360deg);
+    transform: rotate(180deg);
 
     .btn-line {
       // Line 1 - Rotate
@@ -91,7 +91,7 @@
       height: 250px;
       background: url("../img/portrait.jpg");
       border-radius: 50%;
-      border: solid 3px #000;
+      border: solid 3px $secondary-color;
     }
   }
 
@@ -116,7 +116,7 @@
     text-transform: uppercase;
     padding: 1rem 0;
     font-weight: 300;
-    color: #000;
+    color: #fff;
     text-decoration: none;
     @include easeOut;
 
