--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,8 +1,8 @@
-$primary-color: #fff;
-$secondary-color: #ff001b;
+$primary-color: white;
+$secondary-color: red;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
-$background-opacity: 0.6;
+$background-opacity: 0.9;
 
 @mixin easeOut {
   transition: all 0.5s ease-out;
@@ -31,22 +31,22 @@ $background-opacity: 0.6;
 
 // Set Text Color
 @function set-text-color($color) {
-  @if (lightness($color) > 20) {
-    @return #000;
+  @if (lightness($color) > 80) {
+    @return black;
   } @else {
-    @return #fff;
+    @return white;
   }
 }
 
 // Media Query Mixins
 @mixin mediaSm {
-  @media screen and (min-width: 0px) and (max-width: 400px) {
+  @media screen and (max-width: 500px) {
     @content;
   }
 }
 
 @mixin mediaMd {
-  @media screen and (min-width: 401px) and (max-width: 768px) {
+  @media screen and (min-width: 501px) and (max-width: 768px) {
     @content;
   }
 }
