font-face added to main cscc- link to local font awesome docs

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,10 @@
 @import "config";
 @import "menu";
-
+@font-face {
+  font-family: "Arvo";
+  font-display: auto;
+  src: local("Arvo"), url("/css/fontawesome-all.css") format("woff2");
+}
 * {
   box-sizing: border-box;
 }
