--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,7 +3,7 @@
 @font-face {
   font-family: "Arvo";
   font-display: auto;
-  src: local("Arvo"), url("/css/fontawesome-all.css") format("woff2");
+  src: local("Arvo"), url("css/fontawesome-all.css") format("woff2");
 }
 * {
   box-sizing: border-box;
