--- a/scss/main.scss
+++ b/scss/main.scss
@@ -68,25 +68,21 @@ main {
     grid-gap: 0.5rem;
     grid-template-areas: "icon1 icon2 icon3";
     grid-template-columns: repeat(3, 1fr);
+    text-align: center;
 
     .icon1 {
       grid-area: icon1;
+      justify-content: center;
     }
 
     .icon2 {
       grid-area: icon2;
+      justify-content: center;
     }
 
     .icon3 {
       grid-area: icon3;
-    }
-
-    .icon4 {
-      grid-area: icon4;
-    }
-
-    .icon5 {
-      grid-area: icon5;
+      justify-content: center;
     }
 
     a {
@@ -97,12 +93,41 @@ main {
         @include easeOut();
       }
     }
+
+    &#home {
+      overflow: hidden;
+      h1 {
+        margin-top: 5vh;
+      }
+    }
   }
 
-  &#home {
-    overflow: hidden;
-    h1 {
-      margin-top: 5vh;
+  .success {
+    margin-top: 1rem;
+    display: grid;
+    grid-gap: 0.5rem;
+    grid-template-areas: "icon2 icon3";
+    grid-template-columns: repeat(2, 1fr);
+    text-align: center;
+    justify-content: center;
+
+    .icon2 {
+      grid-area: icon2;
+      text-align: center;
+    }
+
+    .icon3 {
+      grid-area: icon3;
+      text-align: center;
+    }
+
+    a {
+      padding: 0.8rem;
+
+      &:hover {
+        color: $secondary-color;
+        @include easeOut();
+      }
     }
   }
 }
@@ -228,13 +253,6 @@ main {
   justify-content: space-evenly;
   align-items: center;
   margin-top: 1rem;
-
-  form {
-    display: grid;
-    align-items: center;
-    grid-gap: 0.7rem;
-    grid-template-columns: repeat(1, 1fr);
-  }
 
   div {
     font-size: 2rem;
