--- a/css/main.css
+++ b/css/main.css
@@ -117,7 +117,7 @@ body {
       width: 100%;
       height: 100%;
       z-index: -1;
-      background: rgba(255, 255, 255, 0.6); }
+      background: rgba(255, 255, 255, 0.9); }
 
 h1,
 h2,
@@ -160,45 +160,26 @@ main {
     display: grid;
     grid-gap: 0.5rem;
     grid-template-areas: "icon1 icon2 icon3";
-    grid-template-columns: repeat(3, 1fr);
-    text-align: center; }
+    grid-template-columns: repeat(3, 1fr); }
     main .icons .icon1 {
-      grid-area: icon1;
-      justify-content: center; }
+      grid-area: icon1; }
     main .icons .icon2 {
-      grid-area: icon2;
-      justify-content: center; }
+      grid-area: icon2; }
     main .icons .icon3 {
-      grid-area: icon3;
-      justify-content: center; }
+      grid-area: icon3; }
+    main .icons .icon4 {
+      grid-area: icon4; }
+    main .icons .icon5 {
+      grid-area: icon5; }
     main .icons a {
       padding: 0.8rem; }
       main .icons a:hover {
         color: red;
         transition: all 0.5s ease-out; }
-    main .icons#home {
-      overflow: hidden; }
-      main .icons#home h1 {
-        margin-top: 5vh; }
-  main .success {
-    margin-top: 1rem;
-    display: grid;
-    grid-gap: 0.5rem;
-    grid-template-areas: "icon2 icon3";
-    grid-template-columns: repeat(2, 1fr);
-    text-align: center;
-    justify-content: center; }
-    main .success .icon2 {
-      grid-area: icon2;
-      text-align: center; }
-    main .success .icon3 {
-      grid-area: icon3;
-      text-align: center; }
-    main .success a {
-      padding: 0.8rem; }
-      main .success a:hover {
-        color: red;
-        transition: all 0.5s ease-out; }
+  main#home {
+    overflow: hidden; }
+    main#home h1 {
+      margin-top: 5vh; }
 
 .main-info {
   display: grid;
@@ -274,11 +255,11 @@ main {
     text-align: -webkit-center; }
 
 .boxes {
-  display: grid;
+  display: flexbox;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   align-items: center;
-  margin-top: 1rem;
-  text-align: center;
-  width: 100%; }
+  margin-top: 1rem; }
   .boxes div {
     font-size: 2rem;
     border: 3px #fff solid;
@@ -396,6 +377,9 @@ main {
     grid-template-columns: 1fr; }
   .sponsor {
     grid-template-areas: "sponsorship1" "links1" "sponsorship2" "links2" "sponsorship3" "links3";
+    grid-template-columns: 1fr; }
+  form {
+    grid-template-areas: "label1 label2 label3 label4 label5 label6";
     grid-template-columns: 1fr; } }
 
 @media screen and (max-width: 500px) {
@@ -425,6 +409,9 @@ main {
     grid-template-columns: 1fr; }
   main .sponsor {
     grid-template-areas: "sponsorship1" "links1" "sponsorship2" "links2" "sponsorship3" "links3";
+    grid-template-columns: 1fr; }
+  main form {
+    grid-template-areas: "label1 label2 label3 label4 label5 label6";
     grid-template-columns: 1fr; }
   ul.menu-nav,
   div.menu-branding {
