logos removed css need on sponsors page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -251,13 +251,10 @@ main {
   display: grid;
   align-items: center;
   margin-top: 1rem;
-<<<<<<< HEAD
-=======
+  <<<<<<<head=======
   text-align: center;
   width: 100%;
->>>>>>> acdd6ee8fb8e4b365b1b6f8b4fae9ce277538f27
-
-  div {
+  >>>>>>>acdd6ee8fb8e4b365b1b6f8b4fae9ce277538f27 div {
     font-size: 2rem;
     border: 3px #fff solid;
     padding: 1.5rem 2.5rem;
