--- a/scss/main.scss
+++ b/scss/main.scss
@@ -66,8 +66,8 @@ main {
     margin-top: 1rem;
     display: grid;
     grid-gap: 0.5rem;
-    grid-template-areas: "icon1 icon2 icon3";
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: "icon1 icon2";
+    grid-template-columns: repeat(2, 1fr);
     text-align: center;
 
     .icon1 {
@@ -77,11 +77,6 @@ main {
 
     .icon2 {
       grid-area: icon2;
-      justify-content: center;
-    }
-
-    .icon3 {
-      grid-area: icon3;
       justify-content: center;
     }
 
@@ -106,18 +101,13 @@ main {
     margin-top: 1rem;
     display: grid;
     grid-gap: 0.5rem;
-    grid-template-areas: "icon2 icon3";
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "icon2";
+    grid-template-columns: repeat(1, 1fr);
     text-align: center;
     justify-content: center;
 
     .icon2 {
       grid-area: icon2;
-      text-align: center;
-    }
-
-    .icon3 {
-      grid-area: icon3;
       text-align: center;
     }
 
